--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "job-portal-backend",
   "version": "1.0.0",
+  
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npx nodemon server.js"
+    "start": "node server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
